# Building-Knowledge-Graphs

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: crm_data.json  data.json
test/: main.py  requirements.txt
