[tool.poetry]
name = "building-knowledge-graphs"
version = "0.1.0"
description = ""
authors = ["Sreevatsan Sridhar"]
readme = "README.md"
packages = [{include = "building_knowledge_graphs"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
tensorflow = "^2.13.0"
neo4j = "^5.26.0"
pydantic = "^1.10.0"
transformers = "^4.46.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
